<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.beardedhen.androidbootstrap.BootstrapWell
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="?android:attr/colorBackground">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_new"
                android:textAlignment="center"
                android:textSize="@dimen/big_title"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="20dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/project_name" />

                <com.beardedhen.androidbootstrap.BootstrapEditText
                    android:id="@+id/project_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:bootstrapSize="lg"
                    app:roundedCorners="true" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="20dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/project_address" />

                <com.beardedhen.androidbootstrap.BootstrapEditText
                    android:id="@+id/project_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:lines="3"
                    app:bootstrapSize="lg"
                    app:roundedCorners="true" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="20dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/project_startdate" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_horizontal">

                    <com.beardedhen.androidbootstrap.BootstrapEditText
                        android:id="@+id/project_startdate"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        app:bootstrapSize="lg"
                        android:hint="yyyy-MM-dd"
                        app:roundedCorners="true" />

                    <com.beardedhen.androidbootstrap.BootstrapButton
                        android:id="@+id/project_calendar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:roundedCorners="true"
                        app:bootstrapBrand="primary"
                        app:bootstrapSize="lg"
                        android:layout_marginLeft="4dp"
                        app:bootstrapText="{fa_calendar}"/>
                </LinearLayout>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <com.beardedhen.androidbootstrap.BootstrapButton
                android:id="@+id/add_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                app:bootstrapBrand="primary"
                app:bootstrapSize="lg"
                app:bootstrapText="@string/add_new_button"
                app:roundedCorners="true" />
        </LinearLayout>


    </com.beardedhen.androidbootstrap.BootstrapWell>

</RelativeLayout>