<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="160dp">

            <com.beardedhen.androidbootstrap.BootstrapWell
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerVertical="true">
                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/project_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="@dimen/semi_big_title" />

                        <TextView
                            android:id="@id/project_address"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="?android:attr/textColorSecondary"
                            android:textSize="@dimen/sub_title" />
                    </LinearLayout>
                </ScrollView>
            </com.beardedhen.androidbootstrap.BootstrapWell>

        </RelativeLayout>
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                </ScrollView>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="20dp"
                    android:paddingRight="12dp">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/start_date"
                        android:textColor="?android:attr/textColorSecondary" />

                    <TextView
                        android:id="@+id/project_startdate"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textAlignment="textEnd"
                        android:textColor="?android:attr/textColorSecondary"
                        android:textSize="@dimen/sub_title" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="20dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/pengeluaran"
                        android:textColor="@color/darkBlue"
                        android:textSize="@dimen/sub_title" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="6dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/material" />

                        <TextView
                            android:id="@+id/material_cost"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="6dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/bayar" />

                        <TextView
                            android:id="@+id/payment_cost"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="6dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/lain" />

                        <TextView
                            android:id="@+id/other_cost"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="" />
                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1px"
                        android:background="@color/black" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="6dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/total"
                            android:textColor="@color/darkRed" />

                        <TextView
                            android:id="@+id/total_cost"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text=""
                            android:textColor="@color/darkRed" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="20dp">

                        <com.beardedhen.androidbootstrap.BootstrapButton
                            android:id="@+id/material_list"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            app:bootstrapBrand="info"
                            app:bootstrapSize="lg"
                            app:bootstrapText="@string/material2"
                            app:roundedCorners="true" />

                        <com.beardedhen.androidbootstrap.BootstrapButton
                            android:id="@+id/add_material"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="6dp"
                            app:bootstrapBrand="info"
                            app:bootstrapSize="lg"
                            app:bootstrapText="{fa_plus}"
                            app:roundedCorners="true" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="20dp">

                        <com.beardedhen.androidbootstrap.BootstrapButton
                            android:id="@+id/payment_list"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            app:bootstrapBrand="primary"
                            app:bootstrapSize="lg"
                            app:bootstrapText="@string/pembayaran"
                            app:roundedCorners="true" />

                        <com.beardedhen.androidbootstrap.BootstrapButton
                            android:id="@+id/add_payment"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="6dp"
                            app:bootstrapBrand="primary"
                            app:bootstrapSize="lg"
                            app:bootstrapText="{fa_plus}"
                            app:roundedCorners="true" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="20dp">

                        <com.beardedhen.androidbootstrap.BootstrapButton
                            android:id="@+id/other_list"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            app:bootstrapBrand="warning"
                            app:bootstrapSize="lg"
                            app:bootstrapText="@string/lainlain"
                            app:roundedCorners="true" />

                        <com.beardedhen.androidbootstrap.BootstrapButton
                            android:id="@+id/add_other"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="6dp"
                            app:bootstrapBrand="warning"
                            app:bootstrapSize="lg"
                            app:bootstrapText="{fa_plus}"
                            app:roundedCorners="true" />
                    </LinearLayout>


                </LinearLayout>

            </LinearLayout>
        </ScrollView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="6dp">

            <com.beardedhen.androidbootstrap.AwesomeTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/title"
                app:bootstrapText="@string/status" />

            <com.beardedhen.androidbootstrap.AwesomeTextView
                android:id="@+id/project_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/title"
                app:bootstrapBrand="danger"
                app:bootstrapText="" />
        </LinearLayout>
    </LinearLayout>

    <ProgressBar
        android:id="@+id/progress_bar"
        style="?android:progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/project_done"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|right"
        android:layout_margin="16dp"
        android:contentDescription="@string/fab_content_desc"
        app:backgroundTint="@color/bootstrap_brand_success"
        app:tint="@color/white"
        app:srcCompat="@drawable/ic_baseline_check_24" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>
